1.4.2
    * Add a priority setting for Splib.exec
1.4.1
    * Updates in Monitor to attempt to force
        threads to stay put
    * Fix Monitor's locking/unlocking
1.4
    * Clean up exclusive usage in Monitor
    * Add a timeout on Monitor#wait
    * Add Monitor#locked?
    * Add Float library to define Float#within_delta?
1.3
    * Add simple monitor
1.2
    * Added Array#fixed_flatten for pre 1.9 versions
    * Remove IO.binread from CodeReloader for pre 1.9 versions
    * Use array for Conversion information storage since we
        only have Hash ordering in 1.9
    * Use #chr for pre 1.9
    * Make Splib.exec a wrapper for normal and threaded versions
        Check platform and use threaded version when on java
        automatically
1.1
    * Added Splib.type_of? method to the Constants library
    * Splib.find_const returns nil if constant not found
    * Added Splib.find_const to the Constants library
1.0
    * Initial release